[package]
name = "cpp_parser"
version = "0.1.0"
edition = "2021"
description = "A parser for C++-like config files using Pest"
license = "MIT"
repository = "https://github.com/yourusername/cpp_parser"
readme = "README.md"

[lib]
name = "cpp_parser"
path = "src/lib.rs"

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
test-case = "3.3.1"
pretty_assertions = "1.4.1"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_assignments = "allow"
