[package]
name = "cpp_parser"
version = "0.1.0"
edition = "2021"
authors = ["PCA"]
description = "A multi-pass parser for Arma 3 configuration files"
license = "MIT"
repository = "https://github.com/yourusername/cpp_parser"
readme = "README.md"
keywords = ["parser", "arma", "config", "cpp"]
categories = ["parsing", "game-development"]

[lib]
name = "cpp_parser"
path = "src/lib.rs"

[[example]]
name = "parse_config"
path = "examples/parse_config.rs"

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
serde = { version = "1.0.218", features = ["derive"] }
thiserror = "2.0.12"
regex = "1.11.1"
log = "0.4.20"

[dev-dependencies]
test-case = "3.3.1"
pretty_assertions = "1.4.1"

[lints.rust]
dead_code = "allow"
unused_parens = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_assignments = "allow"
